# devdock

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
devdock/: __init__.py  cli.py  manager.py  shell.py
devdock/config/: __init__.py  config_manager.py
tests/: __init__.py  test_cli.py  test_config_manager.py  test_manager.py
